# argus

./: MANIFEST.in  README.rst  setup.cfg
UNKNOWN.egg-info/: SOURCES.txt
argus/: admin.py  forms.py  models.py  run_masscan.py  tests.py  urls.py  views.py  wrapper.sh
argus/migrations/: 0001_initial.py  0002_ip_address.py  0003_auto_20200409_1924.py  0004_scan_scan_range.py  0005_auto_20200409_2116.py  0006_scan_port_range.py  0007_auto_20200426_1523.py
argus/static/: style.css
argus/static/argus/: style.css
argus/templates/: base.html  home.html  host_detail.html  host_search_results.html  hostsearcherror.html  info_page.html  launch.html  login_page.html  scan_detail.html  scan_list.html  scanerror.html
django_argus.egg-info/: PKG-INFO  SOURCES.txt
