[metadata]
name = django-argus
version = 0.2
description = A Django app for running masscans and managing the results
long_description = file: README.rst
url = http://
author = Justin Palk
author_email = jmpalk@gmail.com
license = Apache-2.0
keywords = vulnscan, portscan, masscan
classifiers = 
	Framework :: Django
	License :: OSI Approved :: Apache-2.0
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6

[options]
include_package_data = true
packages = find:
	
